<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="1dp"
        android:theme="@style/ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings_page"
        app:titleTextAppearance="@style/ActionBarTitleTextStyle"
        app:titleTextColor="@color/blue_sky_txt" />

    <TextView
        android:id="@+id/tvTitleOne"
        style="@style/FontProRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/language"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleOne">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbArabic"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arabic"
            android:textSize="@dimen/_15ssp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbEnglish"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textSize="@dimen/_15ssp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvTitleChangeTheme"
        style="@style/FontProRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/theme_mode"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgLanguage" />

    <RadioGroup
        android:id="@+id/rgChangeTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleChangeTheme">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDark"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            android:textSize="@dimen/_15ssp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbLight"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            android:textSize="@dimen/_15ssp" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgLanguage" />

</androidx.constraintlayout.widget.ConstraintLayout>