<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_340sdp"
    android:minHeight="@dimen/_340sdp"
    tools:context=".ui.create_account.AddAccountDialogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_sky_300"
        android:elevation="1dp"
        android:theme="@style/ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/add_new_account"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ActionBarTitleTextStyle"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        style="@style/FontBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/add_your_account_name"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTitle"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@android:color/transparent"
            android:hint="@string/account_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:contentDescription="@string/save_account_name"
        android:src="@drawable/ic_baseline_save_24"
        android:text="@string/save"
        android:textColor="@color/white"
        app:backgroundTint="@color/cream_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAccount"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>