<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/_430sdp"
    android:paddingBottom="@dimen/_30sdp"
    tools:context=".ui.create_account.AddAccountDialogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_sky_300"
        android:elevation="1dp"
        android:theme="@style/ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/add_transaction"
        app:titleCentered="true"
        app:titleTextAppearance="@style/ActionBarTitleTextStyle"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateTitle"
        style="@style/FontBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/add_your_account_name"
        android:textColor="@color/blue_sky_txt"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescTransaction"
        style="@style/FontProRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/description"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/tvDateTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvDescTransaction">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTitle"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@android:color/transparent"
            android:hint="@string/description"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTotalTransaction"
        style="@style/FontProRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/the_amount"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/cvAccount" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTotalTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/tvTotalTransaction">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTotal"
            style="@style/FontProRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:background="@android:color/transparent"
            android:hint="@string/the_amount"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectCurrencyTransaction"
        style="@style/FontProRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/the_amount"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/cvTotalTransaction" />

    <RadioGroup
        android:id="@+id/rgCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectCurrencyTransaction">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_60sdp"
            android:text="@string/dollar_currency"
            style="@style/FontProRegular"
            android:textSize="@dimen/_15ssp"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDinar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FontProRegular"
            android:textSize="@dimen/_15ssp"
            android:text="@string/dinar_currency" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectIncomeTransaction"
        style="@style/FontProRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/select_your_spend_way"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/rgCurrency" />

    <RadioGroup
        android:id="@+id/rgIncome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSelectIncomeTransaction">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/income_amount"
            style="@style/FontProRegular"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbOutcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spend_amount"
            style="@style/FontProRegular"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:contentDescription="@string/save_account_name"
        android:src="@drawable/ic_baseline_save_24"
        android:text="@string/save"
        android:textColor="@color/white"
        app:backgroundTint="@color/cream_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgIncome"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>