<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_340sdp"
    android:minHeight="@dimen/_340sdp"
    tools:context=".ui.update_account.UpdateAccountDialogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_sky_300"
        android:elevation="1dp"
        android:theme="@style/ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/update_account"
        app:titleTextAppearance="@style/ActionBarTitleTextStyle"
        app:titleTextColor="@color/white" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cvUpdateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/account_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLines="1"
            style="@style/FontProRegular"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_save_24"
        android:text="@string/save"
        android:textColor="@color/white"
        app:backgroundTint="@color/cream_100"
        app:layout_constraintEnd_toEndOf="@+id/cvUpdateAccount"
        app:layout_constraintTop_toBottomOf="@id/cvUpdateAccount"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_delete_forever_24"
        android:text="@string/delete"
        android:textColor="@color/white"
        app:backgroundTint="@color/red_100"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/cvUpdateAccount"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>