<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_340sdp"
    android:minHeight="@dimen/_340sdp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_sky_300"
        android:elevation="1dp"
        app:titleCentered="true"
        android:theme="@style/ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/pick_your_date"
        app:titleTextAppearance="@style/ActionBarTitleTextStyle"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/select_your_date"
        android:layout_marginHorizontal="@dimen/_10sdp"
        style="@style/FontBold"
        android:textColor="@color/blue_sky_txt"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintTop_toBottomOf="@id/tvTitleStartDate" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnSaveDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_save_24"
        android:text="@string/save"
        android:textColor="@color/blue_sky_200"
        app:backgroundTint="@color/cream_100"
        app:layout_constraintEnd_toEndOf="@+id/datePicker"
        app:layout_constraintTop_toBottomOf="@id/datePicker"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>